--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "webflow-start-kit-v2",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "typescript": "^4.6.4",
-    "vite": "^3.2.3"
-  }
+	"name": "webflow-start-kit-v2",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build-prod": "tsc && vite build",
+		"build-dev": "tsc && vite build --mode development",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"sass": "^1.56.1",
+		"typescript": "^4.6.4",
+		"vite": "^3.2.3",
+		"@babel/core": "^7.20.2",
+		"@babel/preset-env": "^7.20.2",
+		"@rollup/plugin-babel": "^6.0.2"
+	},
+	"dependencies": {
+	}
 }
