--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build-prod": "tsc && vite build",
-		"build-dev": "tsc && vite build --mode development",
+		"build-prod": "vite build",
+		"build-dev": "vite build --mode development",
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"sass": "^1.56.1",
-		"typescript": "^4.6.4",
-		"vite": "^3.2.3",
 		"@babel/core": "^7.20.2",
 		"@babel/preset-env": "^7.20.2",
-		"@rollup/plugin-babel": "^6.0.2"
-	},
-	"dependencies": {
+		"@rollup/plugin-babel": "^6.0.2",
+		"eslint": "^8.28.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-unicorn": "^45.0.0",
+		"sass": "^1.56.1",
+		"vite": "^3.2.4",
+		"vite-plugin-eslint": "^1.8.1"
 	}
 }
