--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
-		"build-prod": "vite build",
-		"build-dev": "vite build --mode development",
-		"preview": "vite preview"
+		"prod": "vite build --mode production",
+		"dev": "vite build --mode development",
+		"prod-deploy": "vite build --mode production-deploy",
+		"dev-deploy": "vite build --mode development-deploy"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.2",
@@ -17,6 +17,7 @@
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-unicorn": "^45.0.0",
+		"ftp-deploy": "^2.4.3",
 		"sass": "^1.56.1",
 		"vite": "^3.2.4",
 		"vite-plugin-eslint": "^1.8.1"
