Update (Packages): Bump up dependencies versions, add swiper for demo.

--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
 		"dev-deploy": "vite build --mode development-deploy"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.20.2",
+		"@babel/core": "^7.20.5",
 		"@babel/preset-env": "^7.20.2",
-		"@rollup/plugin-babel": "^6.0.2",
-		"eslint": "^8.28.0",
+		"@rollup/plugin-babel": "^6.0.3",
+		"eslint": "^8.29.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-unicorn": "^45.0.0",
+		"eslint-plugin-unicorn": "^45.0.1",
 		"ftp-deploy": "^2.4.3",
 		"sass": "^1.56.1",
-		"vite": "^3.2.4",
+		"vite": "^3.2.5",
 		"vite-plugin-eslint": "^1.8.1"
+	},
+	"dependencies": {
+		"swiper": "^8.4.5"
 	}
 }
