--- a/package.json
+++ b/package.json
@@ -19,7 +19,18 @@
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-unicorn": "^45.0.2",
 		"ftp-deploy": "^2.4.3",
+		"postcss": "^8.4.20",
 		"sass": "^1.57.0",
+		"stylelint": "^14.16.0",
+		"stylelint-color-format": "^1.1.0",
+		"stylelint-config-idiomatic-order": "^9.0.0",
+		"stylelint-config-recommended-scss": "^8.0.0",
+		"stylelint-config-sass-guidelines": "^9.0.1",
+		"stylelint-config-standard": "^29.0.0",
+		"stylelint-declaration-block-no-ignored-properties": "^2.6.0",
+		"stylelint-high-performance-animation": "^1.7.0",
+		"stylelint-scss": "^4.3.0",
+		"stylelint-use-logical-spec": "^4.1.0",
 		"vite": "^4.0.2",
 		"vite-plugin-eslint": "^1.8.1"
 	},
