--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
 		"@rollup/plugin-babel": "^6.0.3",
 		"eslint": "^8.30.0",
 		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-unicorn": "^45.0.2",
 		"ftp-deploy": "^2.4.3",
 		"postcss": "^8.4.20",
+		"prettier": "^2.8.1",
 		"sass": "^1.57.0",
 		"stylelint": "^14.16.0",
 		"stylelint-color-format": "^1.1.0",
@@ -29,6 +32,7 @@
 		"stylelint-config-standard": "^29.0.0",
 		"stylelint-declaration-block-no-ignored-properties": "^2.6.0",
 		"stylelint-high-performance-animation": "^1.7.0",
+		"stylelint-prettier": "^2.0.0",
 		"stylelint-scss": "^4.3.0",
 		"stylelint-use-logical-spec": "^4.1.0",
 		"vite": "^4.0.2",
